--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     
     <div class="navbar">
-        <img src="/img/Logo.svg" alt="Logo">
+        <img src="img/Logo.svg" alt="Logo">
         <nav class="navigation">
             <ul class="nav-list">
                 <li class="nav-item">
