--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <strong class="header-strong">Привет 👋</strong>
             <h1 class="header-heading">
                 <span class="header-primary">Я фронтенд-разработчик и веб-дизайнер</span> <br>
-                Меня зовут Артем Исламов и я делаю  <br>
+                Меня зовут Максим Морозов и я делаю  <br>
                 сайты для людей и компаний
             </h1>
             <div class="header-links">
@@ -76,9 +76,9 @@
             <h2 class="section-heading">Последние проекты</h2>
             <div class="cards">
                 <div class="card">
-                    <img src="img/Portfolio/image 1.jpg" alt="Мобильное приложение" class="card-image">
+                    <img src="img/Portfolio/image 1.png" alt="Мобильное приложение" class="card-image">
                     <div class="card-text-wrapper">
-                        <h3 class="card-title">Мобильное приложение</h3>
+                        <h3 class="card-title">Сайт об Greentest ECO 5</h3>
                         <ul class="tags">
                             <li class="tags-item"><a href="#" class="tag">HTML</a></li>
                             <li class="tags-item"><a href="#" class="tag">CSS</a></li>
@@ -87,7 +87,7 @@
                             <li class="tags-item"><a href="#" class="tag">Vitejs</a></li>
                         </ul>
                         <p class="card-text">
-                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            Интернет магазин, с большим ассортиментом разных приборов для измерения продуктов на нитраты, жесткость и т.д.
                         </p>
                         <div class="card-buttons">
                             <a href="#" class="card-button">
@@ -103,15 +103,15 @@
                 </div>
 
                 <div class="card">
-                    <img src="img/Portfolio/image 2.jpg" alt="Одностраничный промо-сайт" class="card-image">
+                    <img src="img/Portfolio/image 2.png" alt="Одностраничный промо-сайт" class="card-image">
                     <div class="card-text-wrapper">
-                        <h3 class="card-title">Одностраничный промо-сайт</h3>
+                        <h3 class="card-title">Одностраничный сайт Путник</h3>
                         <ul class="tags">
                             <li class="tags-item"><a href="#" class="tag">HTML</a></li>
                             <li class="tags-item"><a href="#" class="tag">CSS</a></li>
                         </ul>
                         <p class="card-text">
-                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            Сайт путник поможет в выборе тура по Алтаю и покажет лучшие места для проведения досуга на природе!
                         </p>
                         <div class="card-buttons">
                             <a href="#" class="card-button">
